[metadata]
name = airflow_dbt_common
version = 1.0.3
author = Mitch Eccles
description = A collection of functions that help airflow DBT dags.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PragmatikAI/airflow_dbt_common
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True